--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -7,7 +7,7 @@
       <div class="card">
           <div class="card-header">Новая запись</div>
           <div class="card-body">
-            <form method="post"> <!--Прошу объяснить, как перенести лейбл поля в верхний правый угол-->
+            <form method="post"> <!--Прошу объяснить, как перенести лейбл поля в верхний левый угол-->
               {% csrf_token %}
               {{ form.as_p }}
               <button type="submit" class="btn btn-primary">
