--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <body>
         {% include 'nav.html' %}
         <main>
+            <h1>{% block header %}The Last Social Media You'll Ever Need{% endblock %}</h1>
             <div class="container">
                 {% block content %}
                 <!-- Содержимое страницы -->
