--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Добавить запись{% endblock %} <!--Прошу объяснить, как выровнять заголовок по центру в форме-->
+{% block title %}Добавить запись{% endblock %} 
 {% block content %}
 
 <div class="row justify-content-center">
@@ -7,13 +7,27 @@
       <div class="card">
           <div class="card-header">Новая запись</div>
           <div class="card-body">
-            <form method="post"> <!--Прошу объяснить, как перенести лейбл поля в верхний правый угол-->
-              {% csrf_token %}
-              {{ form.as_p }}
-              <button type="submit" class="btn btn-primary">
-                Добавить новую запись <!--Прошу объяснить, как выровнять кнопку по центру в форме-->
-              </button>
-            </form>
+            <form method="post">
+                    {% csrf_token %}
+
+                    {% for field in form %}
+                        <div class="form-group row" aria-required={% if field.required %}"true"{% else %}"false"{% endif %}>
+                                <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}{% if field.required %}<span class="required">*</span>{% endif %}</label>
+                                <div class="col-md-6">
+                                    {{ field }}
+                                    {% if field.help_text %}
+                                    <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
+                                    {% endif %}
+                                </div>
+                        </div>
+                    {% endfor %}
+
+                    <div class="col-md-6 offset-md-4">              
+                            <button type="submit" class="btn btn-primary">
+                                Опубликовать
+                            </button>
+                    </div>
+                </form>
           </div> <!-- card body -->
       </div> <!-- card -->
   </div> <!-- col -->
