--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,43 +1,32 @@
 {% extends "base.html" %}
 {% block title %}Добавить запись{% endblock %} 
 {% block content %}
+{% load user_filters %}
 
 <div class="row justify-content-center">
   <div class="col-md-8 p-5">
       <div class="card">
           <div class="card-header">Новая запись</div>
           <div class="card-body">
-<<<<<<< HEAD
             <form method="post">
                     {% csrf_token %}
-
                     {% for field in form %}
                         <div class="form-group row" aria-required={% if field.required %}"true"{% else %}"false"{% endif %}>
                                 <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}{% if field.required %}<span class="required">*</span>{% endif %}</label>
                                 <div class="col-md-6">
-                                    {{ field }}
+                                    {{  field|addclass:"form-control"  }}
                                     {% if field.help_text %}
                                     <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
                                     {% endif %}
                                 </div>
                         </div>
                     {% endfor %}
-
                     <div class="col-md-6 offset-md-4">              
                             <button type="submit" class="btn btn-primary">
                                 Опубликовать
                             </button>
                     </div>
                 </form>
-=======
-            <form method="post"> <!--Прошу объяснить, как перенести лейбл поля в верхний левый угол-->
-              {% csrf_token %}
-              {{ form.as_p }}
-              <button type="submit" class="btn btn-primary">
-                Добавить новую запись <!--Прошу объяснить, как выровнять кнопку по центру в форме-->
-              </button>
-            </form>
->>>>>>> 92a73ce14e1824c8345722fd99bba6b87f8d408d
           </div> <!-- card body -->
       </div> <!-- card -->
   </div> <!-- col -->
