--- a/templates/group.html
+++ b/templates/group.html
@@ -3,12 +3,15 @@
 {% block content %}
 {% block header %} <h1>{{group.title}}</h1> {% endblock %}
     <p>{{group.description}}</p>
-    {% for post in posts %}
+    {% for post in page %}
     <h3>
         Автор: {{post.author.get_full_name}}, дата публикации: {{post.pub_date|date:'d M Y'}}
     </h3>
-    <p>{{ post.text|linebreaksbr }}</p>
-    <hr>
+        <p>{{ post.text|linebreaksbr }}</p>
     {% endfor %}
+
+    {% if page.has_other_pages %}
+        {% include "paginator.html" with items=page paginator=paginator %}
+    {% endif %}
 
 {% endblock %}
