--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -6,7 +6,11 @@
 <div class="row justify-content-center">
   <div class="col-md-8 p-5">
       <div class="card">
+          {% if is_edit %}
+          <div class="card-header">Редактирование</div>
+          {% else %}
           <div class="card-header">Новая запись</div>
+          {% endif %}
           <div class="card-body">
             <form method="post">
                     {% csrf_token %}
@@ -21,10 +25,14 @@
                                 </div>
                         </div>
                     {% endfor %}
-                    <div class="col-md-6 offset-md-4">              
+                    <div class="col-md-6 offset-md-4">
+                            {% if is_edit %}             
+                            <button type="submit" class="btn btn-primary">
+                                Сохранить изменения
+                            {% else %}
                             <button type="submit" class="btn btn-primary">
                                 Опубликовать
-                            </button>
+                            {% endif %}
                     </div>
                 </form>
           </div> <!-- card body -->
